--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             </div>
             <div class="qualification-button button-flex" data-target="#work">
               <i class="fa-solid fa-briefcase qualification-icon"></i>
-              Work
+              Experience
             </div>
           </div>
 
@@ -212,15 +212,14 @@
               id="education"
             >
               <!-- qualifi 1 -->
+
               <div class="qualification-data">
                 <div>
-                  <h3 class="qualification-title">
-                    Computer Science Engineering
-                  </h3>
-                  <span class="qualification-subtitle">GCET Kashmir</span>
+                  <h3 class="qualification-title">SMKN 1 KATAPANG</h3>
+                  <span class="qualification-subtitle">SMK-RPL</span>
                   <div class="qualification-date">
                     <i class="fa-solid fa-calendar-days"></i>
-                    2022 - 2026
+                    2021 - 2024
                   </div>
                 </div>
                 <div>
@@ -233,55 +232,16 @@
 
               <div class="qualification-data">
                 <div></div>
-
-                <div>
-                  <span class="qualification-round"></span>
-                  <span class="qualification-line"></span>
-                </div>
-
-                <div>
-                  <h3 class="qualification-title">
-                    Full Stack Web Development
-                  </h3>
-                  <span class="qualification-subtitle">Udemy</span>
-                  <div class="qualification-date">
-                    <i class="fa-solid fa-calendar-days"></i>
-                    2021 - 2022
-                  </div>
-                </div>
-              </div>
-
-              <!-- qualifi 3 -->
-
-              <div class="qualification-data">
-                <div>
-                  <h3 class="qualification-title">Frontend Development</h3>
-                  <span class="qualification-subtitle">Coursera</span>
-                  <div class="qualification-date">
-                    <i class="fa-solid fa-calendar-days"></i>
-                    2021 - 2022
-                  </div>
-                </div>
-                <div>
-                  <span class="qualification-round"></span>
-                  <span class="qualification-line"></span>
-                </div>
-              </div>
-
-              <!-- qualifi 4 -->
-
-              <div class="qualification-data">
-                <div></div>
                 <div>
                   <span class="qualification-round"></span>
                   <!-- <span class="qualification-line"></span> -->
                 </div>
                 <div>
-                  <h3 class="qualification-title">Digital Marketing</h3>
-                  <span class="qualification-subtitle">Google</span>
+                  <h3 class="qualification-title">SMPN 1 KATAPNG</h3>
+                  <span class="qualification-subtitle">SMP</span>
                   <div class="qualification-date">
                     <i class="fa-solid fa-calendar-days"></i>
-                    2019 - 2020
+                    2019 - 2021
                   </div>
                 </div>
               </div>
@@ -292,11 +252,11 @@
               <!-- qualifi 1 -->
               <div class="qualification-data">
                 <div>
-                  <h3 class="qualification-title">Full Stack Developer</h3>
-                  <span class="qualification-subtitle">Fiverr</span>
+                  <h3 class="qualification-title">WEB DEVELOPER</h3>
+                  <span class="qualification-subtitle">BOOTCAMP </span>
                   <div class="qualification-date">
                     <i class="fa-solid fa-calendar-days"></i>
-                    2022 - Present
+                    OKTOBER (2023) - DESEMBER (2023)
                   </div>
                 </div>
                 <div>
@@ -312,35 +272,19 @@
 
                 <div>
                   <span class="qualification-round"></span>
-                  <span class="qualification-line"></span>
-                </div>
-
-                <div>
-                  <h3 class="qualification-title">Ui/Ux Designer</h3>
-                  <span class="qualification-subtitle">Freelancer</span>
-                  <div class="qualification-date">
-                    <i class="fa-solid fa-calendar-days"></i>
-                    2022 - Present
-                  </div>
-                </div>
-              </div>
-
-              <!-- qualifi 3 -->
-
-              <div class="qualification-data">
-                <div>
-                  <h3 class="qualification-title">Content Creator</h3>
-                  <span class="qualification-subtitle">YouTube</span>
-                  <div class="qualification-date">
-                    <i class="fa-solid fa-calendar-days"></i>
-                    2019 - Present
-                  </div>
-                </div>
-                <div>
-                  <span class="qualification-round"></span>
                   <!-- <span class="qualification-line"></span> -->
                 </div>
+
+                <div>
+                  <h3 class="qualification-title">WEB DEVELOPER</h3>
+                  <span class="qualification-subtitle">INTERNSHIP</span>
+                  <div class="qualification-date">
+                    <i class="fa-solid fa-calendar-days"></i>
+                    JUNI (2023) - SEPTEMBER (2023)
+                  </div>
+                </div>
               </div>
+              
             </div>
           </div>
         </div>
@@ -603,10 +547,10 @@
               <div>
                 <h3 class="contact-title">Email</h3>
                 <a
-                  href="mailto:business.codehype@gmail.com"
+                  href="mailto:badennugraha4@gmail.com"
                   target="_blank"
                   class="contact-subtitle"
-                  >business.codehype@gmail.com</a
+                  >badennugraha4@gmail.com</a
                 >
               </div>
             </div>
@@ -631,8 +575,8 @@
         <div class="footer-bg">
           <div class="footer-container container grid">
             <div>
-              <h1 class="footer-title">Haris Ahmad</h1>
-              <span class="footer-subtitle">Frontend developer</span>
+              <h1 class="footer-title">Baden Nugraha</h1>
+              <span class="footer-subtitle">Web Developer</span>
             </div>
             <ul class="footer-links">
               <li>
@@ -663,7 +607,7 @@
                 <i class="fa-brands fa-github"></i>
               </a>
               <a
-                href="https://www.instagram.com/codehype_/"
+                href="https://www.instagram.com/denngrh_/"
                 target="_blank"
                 class="footer-social"
               >
@@ -671,7 +615,7 @@
               </a>
             </div>
           </div>
-          <p class="footer-copy">By Haris Ahmad - CodeHype</p>
+          <p class="footer-copy"> &copy; 2024 Portfolio. All rights reserved. Developed by Baden Nugraha.</p>
         </div>
       </footer>
     </main>
