--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
               >
             </li>
             <li class="nav-item">
-              <a href="#services" class="nav-link"
-                ><i class="fa-solid fa-briefcase nav-icon"></i> Services</a
+              <a href="#Certificate" class="nav-link">
+                <i class="fa-solid fa-image nav-icon"></i> Certificate</a
               >
             </li>
             <li class="nav-item">
               <a href="#portfolio" class="nav-link"
-                ><i class="fa-solid fa-image nav-icon"></i> Projects</a
+                ><i class="fa-solid fa-briefcase nav-icon"></i> Projects</a
               >
             </li>
             <li class="nav-item">
@@ -122,13 +122,12 @@
             </div>
 
             <div class="home-data">
-              <h1 class="home-title">Hi, I am Baden Nugraha</h1>
+              <h1 class="home-title">Hi, Welcome</h1>
               <a href="https://github.com/Denngrh" target="_blank"
                 ><h3 class="home-subtitle">@Denngrh</h3></a
               >
               <p class="home-description">
-                Passionate frontend developer specializing in pixel-perfect web
-                design.
+                Passionate backend developer specializing in efficient server-side architecture and scalable web applications.
               </p>
               <a href="#contact" class="button button-flex">
                 Contact Me <i class="fa-regular fa-envelope button-icon"></i>
@@ -147,15 +146,18 @@
 
           <div class="about-data">
             <p class="about-description">
-              Vocational School graduate majoring in Software Engineering with skills in web development.
-              Have good interpersonal skills, including communication and cooperation. Interested
-              in creating attractive and efficient web applications, with a focus on the backend and
-              Comprehensive understanding of various programming languages ​​and frameworks.
+              Let me introduce myself, Baden Nugraha, a Vocational School
+              graduate majoring in Software Engineering with skills in web
+              development. Have good interpersonal skills, including
+              communication and cooperation. Interested in creating attractive
+              and efficient web applications, with a focus on the backend and
+              Comprehensive understanding of various programming languages ​​and
+              frameworks.
             </p>
             <div class="about-buttons">
               <a
                 download=""
-                href="/Assets/Resume.pdf"
+                href="Assets/Resume.pdf"
                 class="button button-flex"
               >
                 Download Resume<i
@@ -172,20 +174,22 @@
         <h2 class="section-title">Skills</h2>
         <span class="section-subtitle">My Technical Skills</span>
         <div class="skills-content container">
-          <div class="skills-name">JavaScript</div>
-          <div class="skills-name">React JS</div>
-          <div class="skills-name">Tailwind CSS</div>
-          <div class="skills-name">Bootstrap</div>
+          <div class="skills-name">HTML</div>
           <div class="skills-name">CSS</div>
-          <div class="skills-name">SASS</div>
-          <div class="skills-name">Figma</div>
-          <div class="skills-name">Node JS</div>
-          <div class="skills-name">Express JS</div>
-          <div class="skills-name">MongoDB</div>
-          <div class="skills-name">Photoshop</div>
-          <div class="skills-name">Python</div>
+          <div class="skills-name">JAVASCRIPT</div>
+          <div class="skills-name">Bootstrap</div>
+          <div class="skills-name">NUXT JS</div>
+          <div class="skills-name">LARAVEL</div>
+          <div class="skills-name">GITHUB</div>
+          <div class="skills-name">PHP</div>
+          <div class="skills-name">MYSQL</div>
+          <div class="skills-name">LINUX</div>
+          <div class="skills-name">POSTMAN</div>
+          <div class="skills-name">PLUGIN (WP)</div>
         </div>
       </section>
+
+      <!-- qualification -->
       <section class="qualification section">
         <h2 class="section-title">Qualification</h2>
         <span class="section-subtitle">My journey</span>
@@ -284,13 +288,12 @@
                   </div>
                 </div>
               </div>
-              
             </div>
           </div>
         </div>
       </section>
 
-      <section class="services section" id="services">
+      <section class="services section" id="Certificate">
         <h2 class="section-title">Services</h2>
         <span class="section-subtitle">What I offer</span>
 
@@ -580,7 +583,7 @@
             </div>
             <ul class="footer-links">
               <li>
-                <a href="#services" class="footer-link">Services</a>
+                <a href="#Certificate" class="footer-link">Certificate</a>
               </li>
               <li>
                 <a href="#portfolio" class="footer-link">Portfolio</a>
@@ -615,7 +618,10 @@
               </a>
             </div>
           </div>
-          <p class="footer-copy"> &copy; 2024 Portfolio. All rights reserved. Developed by Baden Nugraha.</p>
+          <p class="footer-copy">
+            &copy; 2024 Portfolio. All rights reserved. Developed by Baden
+            Nugraha.
+          </p>
         </div>
       </footer>
     </main>
