--- a/index.html
+++ b/index.html
@@ -470,16 +470,16 @@
           <div class="swiper-wrapper">
             <!-- project1  -->
             <div class="portfolio-content grid swiper-slide">
-              <img src="Assets/project1.svg" alt="" class="portfolio-img" />
+              <img src="Assets/project1.png" alt="" class="portfolio-img" />
 
               <div class="portfolio-data">
-                <h3 class="portfolio-title">Business Websites</h3>
+                <h3 class="portfolio-title">Portfolio Websites</h3>
                 <p class="portfolio-description">
-                  Dynamic business sites that reflect your brand and engage
-                  customers effectively.
+                  A portfolio site that showcases your talents with 
+                  perfect user experience.
                 </p>
                 <a
-                  href="https://github.com/denngrh/CodeHype-Responsive-Website"
+                  href="https://github.com/Denngrh/denngrh.github.io"
                   target="_blank"
                   class="button button-flex button-small portfolio-button"
                   >Project Link
@@ -489,16 +489,15 @@
             </div>
             <!-- project2  -->
             <div class="portfolio-content grid swiper-slide">
-              <img src="Assets/project2.svg" alt="" class="portfolio-img" />
+              <img src="Assets/project2.png" alt="" class="portfolio-img" />
 
               <div class="portfolio-data">
-                <h3 class="portfolio-title">Portfolio Websites</h3>
+                <h3 class="portfolio-title">Plugin Wordpress</h3>
                 <p class="portfolio-description">
-                  Impressive portfolio sites that showcase your talents with a
-                  flawless user experience.
+                  Contact Form plugin is a plugin for creating and managing customizable contact forms on your WordPress website.
                 </p>
                 <a
-                  href="https://github.com/denngrh/Hypefolio"
+                  href="https://github.com/Denngrh/Contact-Form"
                   target="_blank"
                   class="button button-flex button-small portfolio-button"
                   >Project Link
@@ -508,16 +507,15 @@
             </div>
             <!-- project3  -->
             <div class="portfolio-content grid swiper-slide">
-              <img src="Assets/project3.svg" alt="" class="portfolio-img" />
+              <img src="Assets/project3.png" alt="" class="portfolio-img" />
 
               <div class="portfolio-data">
-                <h3 class="portfolio-title">Landing Pages</h3>
+                <h3 class="portfolio-title">Barbershop</h3>
                 <p class="portfolio-description">
-                  Compelling landing pages that drive conversions and engage
-                  your audience.
+                  The Lily Putra Hairdressing Website is a website used to help find the right place to shave.
                 </p>
                 <a
-                  href="https://github.com/denngrh/Hypefolio"
+                  href="https://github.com/Denngrh/Barber-ujikom"
                   target="_blank"
                   class="button button-flex button-small portfolio-button"
                   >Project Link
